Creating the main pages for our application

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,8 @@
 {
-  "extends": "next/core-web-vitals",
-  "rules": {
-   "indent": ["error", 3]
-  }
+   "extends": "next/core-web-vitals",
+   "rules": {
+      "indent": ["error", 3],
+      "@next/next/no-img-element": "off",
+      "react/no-unescaped-entities": "off"
+   }
 }
