adding the main navigation links using the Link next component

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
    "rules": {
       "indent": ["error", 3],
       "@next/next/no-img-element": "off",
-      "react/no-unescaped-entities": "off"
+      "react/no-unescaped-entities": "off",
+      "semi": ["error", "never"]
    }
 }
