--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
     "@types/validator": "^13.7.17",
+    "bcrypt": "^5.1.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "jose": "^4.14.4",
     "next": "13.2.4",
     "prisma": "^4.8.1",
     "react": "18.2.0",
@@ -28,6 +30,7 @@
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
