--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "jose": "^4.14.4",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.2.4",
     "prisma": "^4.8.1",
     "react": "18.2.0",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
