--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -6,4 +6,8 @@ services:
       - POSTGRES_DB=testdb
     ports:
       - 5432:5432
-    restart: always
+    volumes:
+      - opentable-db:/var/lib/postgresql/data
+    restart: on-failure
+volumes:
+  opentable-db:
