--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
     "@types/validator": "^13.7.17",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
